--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
     
     <header>
         <nav>
-            <div class="logo">DevOps.dev</div>
+            <div class="logo">Tech Guy</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -533,7 +533,7 @@
                 </div>
             </div>
             <div class="hero-text">
-                <h1>Your Name</h1>
+                <h1>Okwute Basil</h1>
                 <p class="subtitle">Backend & DevOps Developer</p>
                 <p>4+ years of experience building scalable backend systems and implementing DevOps best practices. Electrical Engineering graduate with expertise in Node.js, TypeScript, Go, and cloud infrastructure.</p>
                 <div class="cta-buttons">
