--- a/index.html
+++ b/index.html
@@ -528,8 +528,7 @@
             <div class="profile-section">
                 <div class="profile-image">
                     <!-- Replace this comment with your professional photo: -->
-                    <!-- <img src="your-professional-photo.jpg" alt="Your Name - Backend Developer"> -->
-                    Add Your Professional Photo Here
+                    <img src="images/picture.jpeg" alt="Basil - Backend Developer">
                 </div>
             </div>
             <div class="hero-text">
