--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
     
     <header>
         <nav>
-            <div class="logo">Tech Guy</div>
+            <div class="logo">Software Engineer</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#skills">Skills</a></li>
